# sonogram

./: .gitignore  README.md
client/: pyproject.toml
client/src/sonogram/: __init__.py  api.py  config.py  server.py  signing.py
client/tests/: test_api.py  test_config.py  test_server.py  test_signing.py
docs/superpowers/plans/: 2026-07-16-sonogram.md
docs/superpowers/specs/: 2026-07-16-sonogram-design.md
e2e/: driver.py  run.sh
relay/: package-lock.json  package.json  tsconfig.json  vitest.config.ts  wrangler.jsonc
relay/scripts/: gen-test-keys.mjs
relay/src/: auth.ts  http.ts  index.ts  post-office.ts  types.ts
relay/test/: admin.test.ts  auth.test.ts  enrollment.test.ts  env.d.ts  fixtures.ts  helpers.ts  messaging.test.ts  retention.test.ts  status.test.ts
skill/sonogram/: SKILL.md
