[project]
name = "sonogram"
version = "0.1.0"
description = "Async messaging between distributed Claude agents"
requires-python = ">=3.11"
dependencies = ["mcp>=1.9", "httpx>=0.27", "cryptography>=42"]

[project.scripts]
sonogram = "sonogram.server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/sonogram"]

[dependency-groups]
dev = ["pytest>=8"]

[tool.pytest.ini_options]
testpaths = ["tests"]
